[tool.poetry]
name = "blitz_api"
version = "0.5.1"
description = "A backend for the Raspiblitz project"
authors = ["fusion44 <some.fusion@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "0.94.0"
fastapi-plugins = "0.11.0"
anyio = "^3.6.1"
redis = "4.5.4"
aioredis = "2.0.1"
pydantic = "1.10.2"
uvicorn = "0.20.0"
PyJWT = "2.6.0"
python-decouple = "3.6"
psutil = "5.9.4"
requests = "2.28.1"
pyzmq = "25.0.0"
cchardet = "2.1.7"
aiohttp = "3.8.3"
grpcio = "1.50.0"
grpcio-tools = "1.50.0"
googleapis-common-protos = "1.57.0"
protobuf = "^4.21.9"
deepdiff = "5.8.1"
loguru = "^0.6.0"

[tool.poetry.group.dev.dependencies]
black = "22.10.0"
pytest = "7.2.2"
coverage = "6.4.4"
pyclean = "2.2.0"
pre-commit = "2.20.0"
isort = "5.10.1"
pytest-asyncio = "^0.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
