[tool.poetry]
name = "blitz_api"
version = "0.5.1"
description = "A backend for the Raspiblitz project"
authors = ["fusion44 <some.fusion@gmail.com>"]
license = "MIT"
packages = [
    { include = "app" },
]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "0.94.0"
fastapi-plugins = "0.11.0"
anyio = "^3.6.1"
redis = "4.5.4"
aioredis = "2.0.1"
pydantic = "1.10.2"
uvicorn = "0.20.0"
PyJWT = "2.6.0"
python-decouple = "3.6"
psutil = "5.9.4"
requests = "2.28.1"
pyzmq = "25.0.0"
cchardet = "2.1.7"
aiohttp = "3.8.5"
grpcio = "1.53.0"
grpcio-tools = "1.50.0"
googleapis-common-protos = "1.57.0"
protobuf = "^4.21.9"
deepdiff = "5.8.1"
loguru = "^0.6.0"

[tool.poetry.group.dev.dependencies]
black = "22.10.0"
pytest = "7.2.2"
coverage = "6.4.4"
pyclean = "2.2.0"
pre-commit = "2.20.0"
isort = "5.10.1"
pytest-asyncio = "^0.19.0"
ruff = "^0.0.267"
debugpy = "^1.6.7"
click = "^8.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.ruff]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
select = ["E", "F"]
ignore = []

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["A", "B", "C", "D", "E", "F", "G", "I", "N", "Q", "S", "T", "W", "ANN", "ARG", "BLE", "COM", "DJ", "DTZ", "EM", "ERA", "EXE", "FBT", "ICN", "INP", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PT", "PTH", "PYI", "RET", "RSE", "RUF", "SIM", "SLF", "TCH", "TID", "TRY", "UP", "YTT"]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "app/lightning/impl/protos/*"
]

# Same as Black.
line-length = 88

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.9.
target-version = "py39"

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[tool.poetry.scripts]
api = "app.server:main"
